--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -33,6 +33,7 @@ body > header {
   p {
     font-size: 1.5em;
     font-weight: lighter;
+    margin-bottom: 0;
   }
  }
 
